kubernetes/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
  ports:
    - port: 80
      name: web
      targetPort: "web"
      protocol: TCP
    - port: 443
      name: websecure
      targetPort: "websecure"
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
  labels:
    app: traefik
    app.kubernetes.io/instance: traefik
spec:
  type: LoadBalancer # ClusterIP
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
